--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,6 @@
 add_subdirectory(App)
 add_subdirectory(Model)
 add_subdirectory(Views)
+add_subdirectory(Controllers)
 add_subdirectory(FTXUI)
 add_subdirectory(modbuspp)
