--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,5 +2,6 @@ add_subdirectory(App)
 add_subdirectory(Model)
 add_subdirectory(Views)
 add_subdirectory(Controllers)
+add_subdirectory(Containers)
 add_subdirectory(FTXUI)
 add_subdirectory(modbuspp)
