Containers: Implement add method for safe thread map.

--- a/src/App/CMakeLists.txt
+++ b/src/App/CMakeLists.txt
@@ -18,7 +18,8 @@ target_compile_definitions(${APP_NAME} PRIVATE APP_IS_NICE=$<BOOL:$CACHE{APP_SHO
 
 target_link_libraries(${APP_NAME} PRIVATE screen)
 target_link_libraries(${APP_NAME} PRIVATE component)
-target_link_libraries(${APP_NAME} PUBLIC Views)
+target_link_libraries(${APP_NAME} PRIVATE Views)
+target_link_libraries(${APP_NAME} PRIVATE Controllers)
 
 target_compile_options(${APP_NAME} PRIVATE $<$<COMPILE_LANG_AND_ID:CXX,Clang,AppleClang>:-Wall -O3 -Wno-unused-parameter>
         PRIVATE $<$<COMPILE_LANG_AND_ID:CXX,GNU>:-Wall -O3 -Wno-unused-parameter>
