--- a/src/Controllers/CMakeLists.txt
+++ b/src/Controllers/CMakeLists.txt
@@ -14,7 +14,7 @@ endif ()
 
 target_include_directories(${LIB_NAME} INTERFACE .)
 
-target_link_libraries(${LIB_NAME} PRIVATE Containers)
+target_link_libraries(${LIB_NAME} PRIVATE Model)
 
 target_compile_options(
         ${LIB_NAME} PRIVATE $<$<COMPILE_LANG_AND_ID:CXX,Clang,AppleClang>:-Wall -O3 -Wno-unused-parameter>
