--- a/src/Model/CMakeLists.txt
+++ b/src/Model/CMakeLists.txt
@@ -14,6 +14,8 @@ endif ()
 
 target_include_directories(${LIB_NAME} INTERFACE .)
 
+target_link_libraries(${LIB_NAME} PRIVATE Containers)
+
 target_compile_options(
         ${LIB_NAME} PRIVATE $<$<COMPILE_LANG_AND_ID:CXX,Clang,AppleClang>:-Wall -O3 -Wno-unused-parameter>
         PRIVATE $<$<COMPILE_LANG_AND_ID:CXX,GNU>:-Wall -O3 -Wno-unused-parameter>
