--- a/src/Controllers/CMakeLists.txt
+++ b/src/Controllers/CMakeLists.txt
@@ -15,6 +15,7 @@ endif ()
 target_include_directories(${LIB_NAME} INTERFACE .)
 
 target_link_libraries(${LIB_NAME} PRIVATE Model)
+target_link_libraries(${LIB_NAME} PRIVATE Views)
 
 target_compile_options(
         ${LIB_NAME} PRIVATE $<$<COMPILE_LANG_AND_ID:CXX,Clang,AppleClang>:-Wall -O3 -Wno-unused-parameter>
