Modbus: Add empty modbus daemon class.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,6 @@
 add_subdirectory(App)
 add_subdirectory(Model)
+add_subdirectory(Modbus)
 add_subdirectory(Views)
 add_subdirectory(Containers)
 add_subdirectory(Controllers)
