io: Add load json class.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -7,4 +7,5 @@ add_subdirectory(Containers)
 add_subdirectory(Controllers)
 add_subdirectory(FTXUI)
 add_subdirectory(jsoncpp)
+add_subdirectory(io)
 add_subdirectory(modbuspp)
