--- a/src/io/CMakeLists.txt
+++ b/src/io/CMakeLists.txt
@@ -13,7 +13,7 @@ endif ()
 
 target_include_directories(${LIB_NAME} INTERFACE .)
 
-target_link_libraries(${LIB_NAME} PUBLIC jsoncpp)
+target_link_libraries(${LIB_NAME} PUBLIC jsoncpp_lib)
 
 target_compile_options(
         ${LIB_NAME} PRIVATE $<$<COMPILE_LANG_AND_ID:CXX,Clang,AppleClang>:-Wall -O3 -Wno-unused-parameter>
