Cmake: Remove from cmake separate folder for modbus++.
Header file for modbus was copied to project module. Current modbusapp folder is only original source of this file.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,11 +1,11 @@
 add_subdirectory(App)
 add_subdirectory(Configuration)
 add_subdirectory(Model)
-add_subdirectory(Modbus)
 add_subdirectory(Views)
 add_subdirectory(Containers)
 add_subdirectory(Controllers)
 add_subdirectory(FTXUI)
 add_subdirectory(jsoncpp)
 add_subdirectory(io)
-add_subdirectory(modbuspp)
+add_subdirectory(Modbus)
+add_subdirectory(Common)
