--- a/src/Modbus/CMakeLists.txt
+++ b/src/Modbus/CMakeLists.txt
@@ -16,6 +16,7 @@ target_include_directories(${LIB_NAME} INTERFACE .)
 
 target_link_libraries(${LIB_NAME} PRIVATE Views)
 target_link_libraries(${LIB_NAME} PRIVATE Controllers)
+target_link_libraries(${LIB_NAME} PRIVATE Configuration)
 
 target_compile_options(
         ${LIB_NAME} PRIVATE $<$<COMPILE_LANG_AND_ID:CXX,Clang,AppleClang>:-Wall -O3 -Wno-unused-parameter>
