Modbus: Move modbus setter to modbus common.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -8,4 +8,5 @@ add_subdirectory(FTXUI)
 add_subdirectory(jsoncpp)
 add_subdirectory(io)
 add_subdirectory(ModbusThread)
+add_subdirectory(ModbusCommon)
 add_subdirectory(Common)
