--- a/src/Views/CMakeLists.txt
+++ b/src/Views/CMakeLists.txt
@@ -18,6 +18,7 @@ target_link_libraries(${LIB_NAME} PUBLIC screen)
 target_link_libraries(${LIB_NAME} PUBLIC component)
 target_link_libraries(${LIB_NAME} PUBLIC Model)
 target_link_libraries(${LIB_NAME} PUBLIC Configuration)
+target_link_libraries(${LIB_NAME} PRIVATE Common)
 
 target_compile_options(
         ${LIB_NAME} PRIVATE $<$<COMPILE_LANG_AND_ID:CXX,Clang,AppleClang>:-Wall -O3 -Wno-unused-parameter>
